# Sandbox---Python

./: .gitignore  README.md
app/: main.py  pyproject.toml
app/lib/: folium_map_builder.py  h3_map.py  h3_map2.py  region_builder.py  st_map_builder.py
app/pages/: 01_get_address.py  02_traffic_accident.py  03_Day_5.py  03_dict_test.py  04_Day_8.py  04_csv_to_map.py  05_Day_9.py  05_geo_json_japan.py  06_Day_10.py  06_hokkaido_region_selector.py  07_Day_11.py  08_Day_12.py  08_hokkaido_subprefecture.py  09_Day_14.py  10_Day_15.py  13_Day_18.py  13_realtime_cv.py  14_chat.py  15_echo.py  16_meteorite.py  17_Day_23.py  17_h3.py  18_h3_int.py  19_jinja2_sql.py  19_mesh.py  20_zip.py  21_Day_27.py  21_rerun_vs_callback.py  22_Day_28.py  22_step_by_step.py  23_Day_30.py  23_seaborn_visualize.py  24_Ex_1.py  25_Ex_2.py  26_Ex_3.py  27_Ex_4.py  csv_to_map.py  geo_json_japan.py  get_address.py  hokkaido_region_selector.py  (+3 more)
app/pages/pages_hidden/: 01_readme.py  02_Day_3.py  03_Day_5.py  04_Day_8.py  05_Day_9.py  09_Day_14.py  10_Day_15.py  11_Day_16.py  12_Day_17.py  14_Day_19.py  15_Day_21.py  16_Day_22.py  17_Day_23.py  18_Day_24.py  19_Day_25.py  20_Day_26.py  21_Day_27.py  23_Day_30.py
app/static/: named_color.json  unit.csv
