[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["ricewin <hiroccha@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
poetry-core = "^1.9.0"
streamlit = "^1.37.0"
streamlit-folium = "^0.22.0"
folium = "^0.17.0"
geopy = "^2.4.1"
shapely = "^2.0.5"
pydeck = "^0.9.1"
jaxa-earth = {path = "jaxa-earth-0.1.3.zip"}
streamlit-drawable-canvas = "^0.9.3"
geopandas = "^1.0.1"
numpy = "^2.1.1"
opencv-python-headless = "^4.10.0.84"
streamlit-webrtc = "^0.47.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
